--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1043,13 +1043,13 @@ margin-left: -4%;
             <div class="markdown">
                 
     
-    <p>I am a data scientist working at the analytics consultant firm Ferrologic in Sweden. This blog is about data science, mainly in R.</p>
+    <p>My name is Filip Wästberg and I&rsquo;m a Data Science Consultant at Ferrologic Analytics, a Solita company, in Sweden. This is my personal blog about Data Science, R and everything around it.</p>
 
-<p>I’ll do some posts in english and some in Swedish,</p>
+<p>The posts you&rsquo;ll find here are both in English and in Swedish.</p>
 
-<p>If you want to contact me you can do so by Mail eller Twitter.</p>
+<p>Feel free to contact med by mail or LinkedIn.</p>
 
-<p>This blog is created with the R package Blogdown.</p>
+<p>This blog was created with the R package Blogdown.</p>
 
 
             </div>
