nya inlägg o grejer

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -116,7 +116,14 @@
 <section class="main">
     <div class="container">
         <div class="content">
-            <p>My name is Filip Wästberg and I&rsquo;m a Data Science Consultant at Ferrologic Analytics, a Solita company, in Sweden. This is my personal blog about Data Science, R and everything around it.</p>
+            <div class="page-heading">
+
+    about
+
+</div>
+
+            <div class="markdown">
+                <p>My name is Filip Wästberg and I&rsquo;m a Data Science Consultant at Ferrologic Analytics, a Solita company, in Sweden. This is my personal blog about Data Science, R and everything around it.</p>
 
 <p>The posts you&rsquo;ll find here are both in English and in Swedish.</p>
 
@@ -124,6 +131,7 @@
 
 <p>This blog was created with the R package Blogdown.</p>
 
+            </div>
         </div>
     </div>
 </section>
