--- a/public/resume/index.html
+++ b/public/resume/index.html
@@ -116,7 +116,14 @@
 <section class="main">
     <div class="container">
         <div class="content">
-            
+            <div class="page-heading">
+
+    resume
+
+</div>
+
+            <div class="markdown">
+                
 
 <h2 id="who-am-i">Who am I?</h2>
 
@@ -169,6 +176,7 @@
 <li>Uppsala and Stockholm University - Arabic, 2013</li>
 </ul>
 
+            </div>
         </div>
     </div>
 </section>
